# stimulus-onboarding

./: .gitignore  main.py  pyproject.toml
data/: transform_2000.yaml
stimulus_onboarding/: __init__.py  app.py  app.tcss  script_runner.py  scripting.py
stimulus_onboarding/case_study_analysis/: analyze_splits.py  visualize_anndata.py
stimulus_onboarding/data/: pca_reconstruction_config.yaml  pca_reconstructor.py  split.yaml
stimulus_onboarding/ui_components/: __init__.py  action_menu.py  animations.py  terminal.py  text_utils.py  typing.py
stimulus_onboarding/widgets/: __init__.py  case_study.py  data_config.py  model_file.py  stimulus_run.py  transform_scene.py  tune_scene.py  welcome.py
stimulus_onboarding/widgets/assets/: case-study-part-1.txt  case-study-part-2.txt  case-study-part-3.txt  case-study.txt  data-config-part-1.txt  data-config-part-2-post.txt  data-config-part-2-pre.txt  data-config-part-2.txt  model-file-with-functions.py  model-file.py  model-network-params.yaml  model-optimizer-optuna.yaml  stimulus-run-part-1.txt  stimulus-run-part-2.txt  stimulus-run-part-3.txt  stimulus-run-part-4.txt  stimulus-run-part-5.txt  train-model-part-1.txt  train-model-part-2.txt  train-model-part-3.txt  train-model-part-4.txt  train-model-part-5.txt  train-model-part-6.txt  transform-intro-post.txt  transform-intro-pre.txt  transform-intro.txt  transform-run.txt  tune-complete.txt  tune-intro.txt  welcome.txt
