[project]
name = "stimulus-onboarding"
version = "0.1.0"
description = "Interactive TUI onboarding experience for STIMULUS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "rich>=14.0.0",
    "textual-speedups>=0.2.1",
    "anndata>=0.12.6",
]

[project.scripts]
stimulus-onboarding = "stimulus_onboarding.app:main"
stimulus-visualize-data = "stimulus_onboarding.case_study_analysis.visualize_anndata:main"
stimulus-analyze-splits = "stimulus_onboarding.case_study_analysis.analyze_splits:main"

[tool.setuptools.packages.find]
include = ["stimulus_onboarding*"]

[tool.setuptools.package-data]
"stimulus_onboarding" = ["*.tcss", "data/*"]
"stimulus_onboarding.widgets" = ["assets/*"]

[tool.uv]
package = true
